rent controller implemented (NOT TESTED)
